fix(theme): improve contrast of buttons
Raleway is a very thin font which doesn't provide good contrast in small font sizes. Use the default sans-serif font as for all other items.

--- a/src/bricks/theme/theme.css
+++ b/src/bricks/theme/theme.css
@@ -209,7 +209,7 @@ textarea {
   background: 0 0;
   line-height: 1;
   font-size: 0.8rem;
-  font-family: 'Raleway', sans-serif;
+  font-family: sans-serif;
 }
 select[multiple],
 textarea {
